blending based on contours - base

--- a/blending.ipynb
+++ b/blending.ipynb
@@ -301,7 +301,8 @@
     "- 경계에 가까울수록 downscaled->upscaled 이미지 비율을 높게 잡고\n",
     "- 경계에서 멀어질수록 original part 이미지 비율을 높게 설정하여 블렌딩\n",
     "- 일정 거리 이상으로 멀어지면 100% 원본파트\n",
-    "- 선형, sigmoid 등 함수로 interpolation"
+    "- 선형, sigmoid 등 함수로 interpolation\n",
+    "- roi 선택 시에 각 좌표를 모두 저장 -> 좌표를 바탕으로 거리 계산 -> 곡선형태로 저장할 수도 있으므로 더 광범위하게 적용가능한 findContour 함수로 처리하는게 나을듯"
    ]
   },
   {
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "732cefc7",
    "metadata": {},
    "outputs": [],
@@ -349,7 +350,10 @@
     "img_path = 'Lenna_(test_image).png'\n",
     "\n",
     "# down->upscaled 된거 path\n",
-    "# original part path\n"
+    "# original part path\n",
+    "\n",
+    "\n",
+    "# 블렌딩"
    ]
   },
   {
@@ -386,8 +390,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ae501832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def distance_to_polygon_edge(mask, point):\n",
+    "    \"\"\"\n",
+    "    mask: 2D numpy array, polygon 영역이 1(또는 255), 배경이 0인 바이너리 마스크\n",
+    "    point: (x, y) 튜플, 기준점 좌표\n",
+    "\n",
+    "    반환값: point에서 다각형 경계까지의 최단 거리 (float)\n",
+    "    \"\"\"\n",
+    "    # 마스크를 바이너리(0 또는 255)로 변환\n",
+    "    mask_bin = (mask > 0).astype(np.uint8) * 255\n",
+    "\n",
+    "    # 다각형 외곽선(경계) 검출\n",
+    "    contours, _ = cv2.findContours(mask_bin, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    if len(contours) == 0:\n",
+    "        return None  # 다각형이 없는 경우\n",
+    "\n",
+    "    # 모든 경계점에 대해 거리 계산, 최솟값 반환\n",
+    "    min_dist = float('inf')\n",
+    "    for contour in contours:\n",
+    "        for pt in contour:\n",
+    "            dist = np.linalg.norm(np.array(pt[0]) - np.array(point))\n",
+    "            if dist < min_dist:\n",
+    "                min_dist = dist\n",
+    "\n",
+    "    return min_dist\n",
+    "\n",
+    "# 사용 예시\n",
+    "# mask: 다각형이 그려진 바이너리 마스크 (예: 200x200, 가운데 사각형)\n",
+    "# mask = np.zeros((200, 200), dtype=np.uint8)\n",
+    "# polygon = np.array([[50, 50], [150, 50], [150, 150], [50, 150]])\n",
+    "# cv2.fillPoly(mask, [polygon], 255)\n",
+    "\n",
+    "# point = (100, 100)  # 예시 기준점\n",
+    "\n",
+    "# distance = distance_to_polygon_edge(mask, point)\n",
+    "# print(f\"Distance from point {point} to polygon edge: {distance}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4096a74",
    "metadata": {},
    "outputs": [],
    "source": []
