findout dist from any point to closest edge

--- a/blending.ipynb
+++ b/blending.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "e1607c7d",
    "metadata": {},
    "outputs": [
@@ -18,21 +18,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-02 17:23:25.376914: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-05-02 17:23:25.585493: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-05-02 17:23:25.585536: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-05-02 17:23:25.618393: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-05-02 17:23:25.691417: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-05-07 18:37:44.403265: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-05-07 18:37:44.600140: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-05-07 18:37:44.600180: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-05-07 18:37:44.631347: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-05-07 18:37:44.701718: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-05-02 17:23:26.436248: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-      "/home/primarina314/anaconda3/envs/mrs3/lib/python3.11/site-packages/numpy/core/getlimits.py:549: UserWarning: The value of the smallest subnormal for <class 'numpy.float32'> type is zero.\n",
-      "  setattr(self, word, getattr(machar, word).flat[0])\n",
-      "/home/primarina314/anaconda3/envs/mrs3/lib/python3.11/site-packages/numpy/core/getlimits.py:89: UserWarning: The value of the smallest subnormal for <class 'numpy.float32'> type is zero.\n",
-      "  return self._float_to_str(self.smallest_subnormal)\n",
-      "/home/primarina314/anaconda3/envs/mrs3/lib/python3.11/site-packages/numpy/core/getlimits.py:549: UserWarning: The value of the smallest subnormal for <class 'numpy.float64'> type is zero.\n",
-      "  setattr(self, word, getattr(machar, word).flat[0])\n",
-      "/home/primarina314/anaconda3/envs/mrs3/lib/python3.11/site-packages/numpy/core/getlimits.py:89: UserWarning: The value of the smallest subnormal for <class 'numpy.float64'> type is zero.\n",
-      "  return self._float_to_str(self.smallest_subnormal)\n"
+      "2025-05-07 18:37:45.364467: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     },
     {
@@ -51,7 +43,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 4776740988916543827\n",
+      "incarnation: 12851407868879145965\n",
       "xla_global_id: -1\n",
       ", name: \"/device:GPU:0\"\n",
       "device_type: \"GPU\"\n",
@@ -61,7 +53,7 @@
       "  links {\n",
       "  }\n",
       "}\n",
-      "incarnation: 12395946626378228467\n",
+      "incarnation: 409005341030696435\n",
       "physical_device_desc: \"device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\"\n",
       "xla_global_id: 416903419\n",
       "]\n",
@@ -193,35 +185,33 @@
       "  Install to:                    /home/primarina314/anaconda3/envs/mrs3\n",
       "-----------------------------------------------------------------\n",
       "\n",
-      "\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-02 17:23:27.749328: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 18:37:47.174805: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-02 17:23:27.791491: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 18:37:47.217167: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-02 17:23:27.791527: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 18:37:47.217204: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-02 17:23:27.806267: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 18:37:47.237654: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-02 17:23:27.806324: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 18:37:47.237718: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-02 17:23:27.806340: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 18:37:47.237738: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-02 17:23:27.928320: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 18:37:47.387010: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-02 17:23:27.928359: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 18:37:47.387051: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-02 17:23:27.928364: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2022] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
-      "2025-05-02 17:23:27.928383: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "2025-05-07 18:37:47.387057: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2022] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2025-05-07 18:37:47.387077: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
       "Your kernel may have been built without NUMA support.\n",
-      "2025-05-02 17:23:27.928429: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:0 with 9706 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+      "2025-05-07 18:37:47.387090: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:0 with 9706 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
      ]
     }
    ],
@@ -342,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "732cefc7",
    "metadata": {},
    "outputs": [],
@@ -352,13 +342,215 @@
     "# down->upscaled 된거 path\n",
     "# original part path\n",
     "\n",
+    "output_path = 'blending-test'\n",
     "\n",
     "# 블렌딩"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
+   "id": "68af455d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roi, _ = select_polygon_roi(img_path)\n",
+    "mask = np.all(roi != [0, 0, 0], axis=2)\n",
+    "mask_uint8 = mask.astype(np.uint8) * 255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "bafd158d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def point_line_distance(point, line_start, line_end):\n",
+    "    \"\"\"\n",
+    "    점과 선분 사이의 최소 수직거리 계산\n",
+    "    point: (x, y) 튜플\n",
+    "    line_start, line_end: 선분의 두 끝점 (x, y) 튜플\n",
+    "    \"\"\"\n",
+    "    px, py = point\n",
+    "    x1, y1 = line_start\n",
+    "    x2, y2 = line_end\n",
+    "\n",
+    "    # 선분 벡터\n",
+    "    line_vec = np.array([x2 - x1, y2 - y1])\n",
+    "    # 점과 선분 시작점 벡터\n",
+    "    point_vec = np.array([px - x1, py - y1])\n",
+    "\n",
+    "    line_len_sq = np.dot(line_vec, line_vec)\n",
+    "    if line_len_sq == 0:\n",
+    "        # 선분이 점인 경우\n",
+    "        return np.linalg.norm(point_vec)\n",
+    "\n",
+    "    # 점에서 선분으로의 투영 비율\n",
+    "    t = np.dot(point_vec, line_vec) / line_len_sq\n",
+    "\n",
+    "    if t < 0.0:\n",
+    "        # 투영점이 선분 시작점 밖에 있는 경우\n",
+    "        closest_point = np.array([x1, y1])\n",
+    "    elif t > 1.0:\n",
+    "        # 투영점이 선분 끝점 밖에 있는 경우\n",
+    "        closest_point = np.array([x2, y2])\n",
+    "    else:\n",
+    "        # 투영점이 선분 위에 있는 경우\n",
+    "        closest_point = np.array([x1, y1]) + t * line_vec\n",
+    "\n",
+    "    # 점과 가장 가까운 점 사이 거리\n",
+    "    dist = np.linalg.norm(np.array([px, py]) - closest_point)\n",
+    "    return dist\n",
+    "\n",
+    "def distance_to_polygon_edge(mask, point):\n",
+    "    \"\"\"\n",
+    "    mask: 2D numpy array, 다각형 영역이 1(또는 255), 배경이 0인 바이너리 마스크\n",
+    "    point: (x, y) 튜플, 기준점 좌표\n",
+    "\n",
+    "    반환값: point에서 다각형 경계까지의 최소 수직거리 (float)\n",
+    "    \"\"\"\n",
+    "    # 마스크를 바이너리(0 또는 255)로 변환\n",
+    "    mask_bin = (mask > 0).astype(np.uint8) * 255\n",
+    "\n",
+    "    # 다각형 외곽선(경계) 검출\n",
+    "    contours, _ = cv2.findContours(mask_bin, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    if len(contours) == 0:\n",
+    "        return None  # 다각형이 없는 경우\n",
+    "\n",
+    "    min_dist = float('inf')\n",
+    "    for contour in contours:\n",
+    "        pts = contour.reshape(-1, 2)\n",
+    "        n = len(pts)\n",
+    "        for i in range(n):\n",
+    "            start = tuple(pts[i])\n",
+    "            end = tuple(pts[(i + 1) % n])\n",
+    "            dist = point_line_distance(point, start, end)\n",
+    "            if dist < min_dist:\n",
+    "                min_dist = dist\n",
+    "\n",
+    "    return min_dist\n",
+    "\n",
+    "# 사용 예시\n",
+    "# mask = np.zeros((200, 200), dtype=np.uint8)\n",
+    "# polygon = np.array([[50, 50], [150, 50], [150, 150], [50, 150]])\n",
+    "# cv2.fillPoly(mask, [polygon], 255)\n",
+    "\n",
+    "# point = (100, 100)  # 예시 기준점\n",
+    "# distance = distance_to_polygon_edge(mask, point)\n",
+    "# print(f\"Distance from point {point} to polygon edge: {distance}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "4dd97249",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "distance from (40, 51) to edge: 0.0\n",
+      "distance from (21, 172) to edge: 0.7071067811865476\n",
+      "distance from (74, 146) to edge: 36.40054944640259\n",
+      "distance from (59, 79) to edge: 33.421549934136806\n",
+      "distance from (60, 33) to edge: 2.1213203435596424\n",
+      "distance from (30, 54) to edge: 3.605551275463989\n",
+      "distance from (85, 19) to edge: 0.7071067811865476\n",
+      "distance from (59, 34) to edge: 2.0\n",
+      "distance from (43, 48) to edge: 0.7071067811865476\n",
+      "distance from (62, 40) to edge: 4.47213595499958\n",
+      "distance from (63, 38) to edge: 3.5355339059327378\n",
+      "distance from (63, 33) to edge: 0.0\n",
+      "distance from (61, 34) to edge: 0.7071067811865476\n",
+      "distance from (61, 113) to edge: 57.14017850864661\n",
+      "distance from (75, 170) to edge: 14.560219778561036\n",
+      "distance from (94, 108) to edge: 31.144823004794873\n",
+      "distance from (3, 189) to edge: 24.698178070456937\n",
+      "distance from (14, 179) to edge: 10.0\n",
+      "distance from (38, 140) to edge: 31.400636936215164\n",
+      "distance from (118, 173) to edge: 13.892443989449804\n",
+      "distance from (25, 32) to edge: 24.08318915758459\n",
+      "distance from (14, 18) to edge: 41.86884283091664\n",
+      "distance from (40, 20) to edge: 24.413111231467404\n",
+      "distance from (67, 19) to edge: 9.433981132056603\n",
+      "distance from (30, 47) to edge: 9.192388155425117\n",
+      "distance from (15, 42) to edge: 22.20360331117452\n",
+      "distance from (24, 15) to edge: 38.01315561749642\n",
+      "distance from (96, 90) to edge: 30.265491900843113\n",
+      "distance from (113, 134) to edge: 5.0990195135927845\n",
+      "distance from (114, 88) to edge: 13.0\n",
+      "distance from (125, 81) to edge: 2.0\n",
+      "distance from (64, 111) to edge: 59.09314681077663\n",
+      "distance from (77, 56) to edge: 26.248809496813376\n",
+      "distance from (78, 51) to edge: 22.80350850198276\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dist = distance_to_polygon_edge(mask, (100, 100))\n",
+    "# print(dist)\n",
+    "\n",
+    "def check_dist(event, x, y, flags, param):\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "        dist = distance_to_polygon_edge(mask, (x, y))\n",
+    "        print(f\"distance from ({x}, {y}) to edge: {dist}\")\n",
+    "\n",
+    "cv2.namedWindow(\"test\")\n",
+    "cv2.setMouseCallback(\"test\", check_dist)\n",
+    "\n",
+    "cv2.imshow('test', mask_uint8)\n",
+    "\n",
+    "clicking = True\n",
+    "while True:\n",
+    "    key = cv2.waitKey(1)\n",
+    "    if key == 27:\n",
+    "        break\n",
+    "\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "df3cb828",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.imshow('test', mask)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "9a52bebb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "512e80be",
    "metadata": {},
    "outputs": [
@@ -375,7 +567,10 @@
     }
    ],
    "source": [
-    "mrs3_compress('Lenna_(test_image).png', 'qwergfhfghgfhgfg', 4, ROI_mode.Polygon)\n"
+    "\n",
+    "\n",
+    "\n",
+    "mrs3_compress(img_path, output_path, 4, ROI_mode.Polygon)\n"
    ]
   },
   {
@@ -434,8 +629,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "f4096a74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: 경계 interpolation 한계 설정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "020c0014",
    "metadata": {},
    "outputs": [],
    "source": []
